# CAS

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
data/: eia_dielectric_codes.json
docs/: schema.md
examples/: 01_mlcc_grm32_1uF.json  02_alu_electrolytic_upw.json
schemas/: CAS.json  capacitor.json  inputs.json  outputs.json  utils.json
schemas/inputs/: designRequirements.json
src/: CasConverter.cpp  CasConverter.hpp  bindings.cpp  libCAS.cpp
tests/: test_cas.cpp  test_schemas.py
